# scalesurfer

./: .gitignore  FreeSurferColorLUT.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: inference.yml  publish.yml
docs/notebooks/00_data/: 01_hcp.ipynb  01_openneuro.ipynb  02_hcp.ipynb  02_openneuro.ipynb  03_cache.ipynb  04_adni.ipynb  adni.py  adni_label.py
docs/notebooks/01_volume/: 04_train.ipynb  05_train_freesurfer_versions.ipynb
docs/notebooks/02_stats/: 09_stats.ipynb
docs/notebooks/02_surface/: 07_cortex_ode.ipynb
docs/notebooks/03_inference/: 08_inference copy.ipynb  08_inference.ipynb  10_adni_classifier.ipynb
scalesurfer/: __init__.py  api.py  config.py  convert.py  data.py  experiments.py  hub.py  metrics.py  openneuro.py  scalesurfer.py  splits.py  stats_prediction.py  utils.py
scalesurfer/evaluation/: plotting.py  volume.py
scalesurfer/experiments/: __init__.py  clinical.py  clinical_datasets.py  config.py
scalesurfer/inference/: _datasets.py  _io.py  _models.py  _runtime.py  _settings.py
scalesurfer/integrations/: freesurfer.py  freeview.py
scalesurfer/models/: stats.py  volume.py
scalesurfer/stats/: __init__.py  inference.py  models.py  train.py  utils.py
scalesurfer/surface/: cortex_ode.py  masks.py  metrics.py  topology.py
scalesurfer/surface/CortexODE/: requirements.txt
scalesurfer/surface/CortexODE/model/: net.py
scalesurfer/training/stats/: train.py
scalesurfer/training/volume/: config.py  pipeline.py  splits.py  targets.py  train.py  utils.py
scalesurfer/volume/: eval.py  fs.py  model.py  norm.py  notebook.py  surfaces.py  targets.py
tests/: test_hub.py  test_inference.py
