[project]
name = "scalesurfer"
version = "0.1.0"
description = "Fast 3D brain segmentation and FreeSurfer-like statistics inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub",
    "joblib",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numba",
    "numpy",
    "pandas",
    "safetensors",
    "scikit-image",
    "scipy",
    "seaborn>=0.13.2",
    "torch",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]
openneuro = [
    "boto3",
    "botocore",
    "joblib",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numba",
    "numpy",
    "pandas",
    "scikit-image",
    "scipy",
    "torch",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scalesurfer"]
