[project]
name = "scalesurfer"
version = "0.1.0"
description = "Fast 3D brain segmentation and FreeSurfer-like statistics inference."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ryan Hammonds"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "huggingface-hub",
    "joblib",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numba",
    "numpy",
    "pandas",
    "safetensors",
    "scikit-image",
    "scipy",
    "seaborn>=0.13.2",
    "torch",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]

openneuro = [
    "boto3",
    "botocore",
    "joblib",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numba",
    "numpy",
    "pandas",
    "scikit-image",
    "scipy",
    "torch",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/voytekresearch/scalesurfer"
Repository = "https://github.com/voytekresearch/scalesurfer"
Issues = "https://github.com/voytekresearch/scalesurfer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scalesurfer"]

[tool.hatch.build.targets.sdist]
include = [
    "/scalesurfer",
    "/README.md",
    "/pyproject.toml",
]
